--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "^49.0.5",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
@@ -20,8 +22,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-autocomplete-dropdown": "^3.0.2",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
