--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-autocomplete-dropdown": "^3.0.2",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-pager-view": "^6.2.0",
